# irrlamb

./: .gitignore  AddPCH.cmake  CHANGELOG  CMakeLists.txt  FindIrrlicht.cmake  README
assets/art/: logo.xcf
assets/collision/: convert.bat  tut_move0.col
assets/font/: CFontTool.cpp  main.cpp
assets/irrb/: io_export_irrlicht.py  patch.txt  setup_env.sh
assets/meshes/: cube.blend  cylinder.blend  cylinder_tall.blend  skate_corner0.blend  skate_corner1.blend  skate_quarterpipe0.blend  skate_rail0.blend  skate_rail1.blend  skate_ramp0.blend  sphere.blend  sphere_hi.blend
assets/scenes/: a_caves0.blend  a_hills0.blend  a_skate0.blend  a_skate1.blend  c_roll0.blend  c_trees0.blend  sas_0.blend  sas_1.blend  skate_0.blend  skate_1.blend  test.blend  tree.blend  tut_cylinder0.blend  tut_cylinder1.blend  tut_hill0.blend  tut_jump0.blend  tut_jump1.blend  tut_jump2.blend  tut_jump3.blend  tut_jump4.blend  tut_longjump0.blend  tut_mix0.blend  tut_move0.blend  tut_move1.blend  tut_move2.blend  tut_sphere0.blend
assets/sounds/: confirm.flac  orb.flac  player.flac
assets/textures/: brick0.xcf  crate0.xcf  woodfloor0.xcf
cmake/: AddPCH.cmake  FindIrrlicht.cmake  FindOgg.cmake  FindSQLite.cmake  FindVorbis.cmake
codelite/: irrlamb.project  irrlamb.workspace
deployment/: changelog.txt  install-win.nsi  irrlamb  irrlamb.desktop  irrlamb.xpm  make_src.sh
extlibs/: lua51.lib  lua51_d.lib  sqlite3.lib  sqlite3_d.lib
extlibs/debug/: lua52_d.lib  sqlite3.lib
extlibs/freetype/: freetype.lib  freetype_d.lib
extlibs/lua51/: lua51.lib  lua51_d.lib
extlibs/release/: lua52.lib  sqlite3.lib
extlibs/sqlite3/: sqlite3.lib  sqlite3_d.lib
extlibs/vorbis/: libogg.lib  libogg_d.lib  libvorbis.lib  libvorbis_d.lib  libvorbisfile.lib  libvorbisfile_d.lib
projects/: irrlamb.sdf  irrlamb.sln  irrlamb.vcxproj  irrlamb.vcxproj.filters
source/: menu.cpp  play.cpp  resource.rc
source/engine/: audio.h  camera.h  campaign.cpp  campaign.h  config.cpp  database.cpp  fader.cpp  fader.h  filestream.cpp  filestream.h  game.cpp  game.h  globals.h  graphics.h  input.cpp  input.h  interface.cpp  interface.h  log.cpp  log.h  objectmanager.cpp  objectmanager.h  physics.cpp  save.h  scripting.cpp  scripting.h  singleton.h  state.h
source/irrb/: CIrrBMeshFileLoader.cpp  CIrrBMeshFileLoader.h  CIrrBMeshWriter.cpp  CIrrBMeshWriter.h
source/objects/: box.cpp  collision.cpp  constraint.cpp  constraint.h  cylinder.cpp  cylinder.h  object.h  orb.h  player.cpp  sphere.h  springjoint.h  template.cpp  template.h  zone.h
source/stb_vorbis/: stb_vorbis.c
src/: all.cpp  all.h  main.cpp  menu.cpp  menu.h  null.cpp  null.h  play.cpp  play.h  stdafx.cpp  stdafx.h  test.cpp  test.h  ui.cpp  ui.h  viewreplay.cpp  viewreplay.h
src/engine/: actions.cpp  actions.h  actiontypes.h  audio.cpp  audio.h  camera.cpp  camera.h  campaign.cpp  campaign.h  config.cpp  config.h  constants.h  database.cpp  database.h  fader.cpp  fader.h  filestream.cpp  filestream.h  game.cpp  game.h  globals.cpp  globals.h  graphics.cpp  graphics.h  input.cpp  input.h  interface.cpp  interface.h  level.cpp  level.h  log.cpp  log.h  namespace.h  objectmanager.cpp  objectmanager.h  physics.cpp  physics.h  random.cpp  random.h  replay.cpp  (+7 more)
src/font/: CGUITTFont.cpp  CGUITTFont.h  irrUString.h
src/irrb/: CIrrBMeshFileLoader.cpp  CIrrBMeshFileLoader.h  CIrrBMeshWriter.cpp  CIrrBMeshWriter.h
src/objects/: box.cpp  box.h  collision.cpp  collision.h  constraint.cpp  constraint.h  cylinder.cpp  cylinder.h  object.cpp  object.h  orb.cpp  orb.h  player.cpp  player.h  sphere.cpp  sphere.h  springjoint.cpp  springjoint.h  template.cpp  template.h  terrain.cpp  terrain.h  zone.cpp  zone.h
src/stb_vorbis/: stb_vorbis.cpp  stb_vorbis.h
src/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxml2.cpp  tinyxml2.h  tinyxmlerror.cpp  tinyxmlparser.cpp
tools/: CMakeLists.txt
tools/colmesh/: CMakeLists.txt  main.cpp
working/: move.bat  move.sh
working/fonts/: fjallaone_24.xml  font_large.xml  font_medium.xml  font_small.xml
working/levels/: main.xml
working/levels/c_roll0/: c_roll0.col  c_roll0.irr  c_roll0.lua  c_roll0.xml
working/levels/c_trees0/: c_trees0.col  c_trees0.irr  c_trees0.lua  c_trees0.xml
working/levels/sas_0/: sas_0.col  sas_0.irr  sas_0.lua  sas_0.xml
working/levels/sas_1/: sas_1.col  sas_1.irr  sas_1.lua  sas_1.xml
working/levels/skate_0/: a_skate0.col  a_skate0.irr  a_skate0.lua  skate_0.irr  skate_0.lua  skate_0.xml
working/levels/skate_1/: a_skate1.col  a_skate1.irr  a_skate1.irrbmesh  skate_1.irr  skate_1.lua  skate_1.xml
working/levels/terrain/: terrain.irr  terrain.xml
working/levels/test/: test.col  test.irr  test.lua  test.xml
working/levels/tut_cylinder0/: tut_cylinder0.col  tut_cylinder0.irr  tut_cylinder0.lua  tut_cylinder0.xml
working/levels/tut_cylinder1/: tut_cylinder1.col  tut_cylinder1.irr  tut_cylinder1.lua  tut_cylinder1.xml
working/levels/tut_hill0/: tut_hill0.col  tut_hill0.irr  tut_hill0.lua  tut_hill0.xml
working/levels/tut_jump0/: tut_jump0.col  tut_jump0.irr  tut_jump0.lua  tut_jump0.xml
working/levels/tut_jump1/: tut_jump1.col  tut_jump1.irr  tut_jump1.lua  tut_jump1.xml
working/levels/tut_jump2/: tut_jump2.col  tut_jump2.irr  tut_jump2.lua  tut_jump2.xml
working/meshes/: c_roll0.irrbmesh  c_roll0.irrmesh  c_trees0.ground.irrbmesh  c_trees0.irrbmesh  c_trees0.water.irrbmesh  cube.irrbmesh  cylinder.irrbmesh  cylinder_tall.irrbmesh  sas_0.irrbmesh  sas_1.irrbmesh  skate_0.irrbmesh  skate_1.irrbmesh  skate_corner0.irrbmesh  skate_corner1.irrbmesh  skate_quarterpipe0.irrbmesh  skate_rail0.irrbmesh  skate_rail1.irrbmesh  skate_ramp0.irrbmesh  sphere.irrbmesh  sphere_hi.irrbmesh  test.irrbmesh  test.irrmesh  tree.irrbmesh  tut_cylinder0.irrbmesh  tut_cylinder1.irrbmesh  tut_hill0.irrbmesh  tut_jump0.irrbmesh  tut_jump1.irrbmesh  tut_jump2.irrbmesh  tut_jump3.irrbmesh  tut_jump4.irrbmesh  tut_longjump0.irrbmesh  tut_move0.irrbmesh  tut_move1.irrbmesh  tut_move2.irrbmesh  tut_sphere0.irrbmesh  watertest.irrbmesh
working/scripts/: default.lua
working/shaders/: lighting.frag  lighting.vert
(+29 files in other folders)
